--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./src/apple-touch-icon.png"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./src/favicon-32x32.png"
+      href="%PUBLIC_URL%/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./src/favicon-16x16.png"
+      href="%PUBLIC_URL%/favicon-16x16.png"
     />
-    <link rel="manifest" href="./src/site.webmanifest" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
